<resources>
    <string name="app_name">StartPage</string>
    <string name="aboutRSAMI">In 1949, the need for a Central Sports and Games ground for Southern command was felt and General Maharaja Shri Rajendra Sinhji, D.S.O, GOC-in-C Southern Command, ordered the Polo Club ground to be leveled to accommodate a Cricket, Football and  Hockey ground……………..

….approached Poona club…… The Poona club, however, could not find their way to meet this request……….

……..It was then decided by the GOC-in-C to start in a small way………………..An open air dance was organized on 15th March 1950 to collect funds and at the same time mark the opening of the institute………….

………..A meeting of the officers of the Poona Garrison was held and the officers unanimously requested General Rajendra Sinhji to agree to the club being called ‘The Rajendra Sinhji Army Mess and Institute for Defense Services Officers’

Thus on 20th April 1950 the Rajendra Sinhji Army Mess and Institute officially came into being ……………
………….The motto approved for the Institute is ‘Comradeship through Sport’……………..</string>
    <string name="affiliations">1.	DSOI Bhopal \n

2.	DSOI Jhansi\n

3.	Officers Institute, Jodhpur\n

4.	Golden Katar Officers Institute, Ahmedabad\n

5.	Chinkara Officer Institute, Jaipur\n

6.	Officer Institute, Nasirabad\n

7.	Sarvatra Officers, Institute\n

8.	Army Officers Institute, Jamnagar\n

9.	DSOI, Udaipur\n

10.	AOI, Juhu and AOI Colaba (Extn of AOI Juhu)\n

11.	Temple Hill Institute, Deolali\n

12.	Sarath Institute, Ahmednagar\n

13.	Kamptee Club, Kamptee\n

14.	YSG ( Yuvraj Fatehsinh Rao Gymkhana ) Club Baroda\n

15.	DSOI, Kolhapur\n

16.	Parbat Ali Officers  Institute, Gandhinagar\n

17.	RSI Bangalore\n

18.	RSI Secunderabad\n

19.	DOI Cannanore\n

20.	Pangode Club at Trivendrum\n

21.	Meads Club, Belgaum\n

22.	U S Club, Mumbai\n

23.	Shahbaar officers Institute, Lucknow\n

24.	Officers  Institute, Gwalior\n

25.	DSOI, Dhaula Kaun , New Delhi\n

26.	DSOI, Chandigarh\n

27.	DSOI, Gurgaon</string>
	<string name="theatreInfo">400 seater Open Air Theatre with outdoor snack counters is for screening training/other Films and plays / drama.</string>
	<string name="eventLawnInfo">A sprawling expanse of well manicured greens allow for hosting Outdoor Events, Official Functions and Gatherings. The lawns really come into its own on Special Days.</string>
	<string name="hallInfo">Over 500 people can be accommodated in this large Hall available for Training, Official Functions,official seminars and Multi Functions.</string>
	<string name="guestRoomInfo">Five well furnished air-conditioned rooms are available on a first-come basis to offices on official visit. For allotment please Contact Asst Secyin RSI office.</string>
	<string name="barInfo">Well stocked Bars on two floors are air conditioned for the use by the members only.</string>
	<string name="trincoInfo">Multi-Cuisine are served during the Lunch and Dinner timings with buffet facilities on Saturdays and Sundays. Party rooms provides fine dining experience to the members.</string>
	<string name="cafeInfo">A coffee shop with steaming hot cups of Tea and coffee complemented with an array of bakery and fast food items are available to the members..</string>
	<string name="billiardInfo">At RSAMI you will find high quality Billiards table which enables members to practice concerntration and aming.</string>
</resources>