<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="310dp"
                android:src="@drawable/logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="\ \nWelcome to the RSAMI app!"
                android:background="#000000"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="24dp"
                android:textColor="#F7D00C"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="\ \n About RSAMI"
                android:textStyle="bold"
                android:textSize="20dp"
                android:textColor="@color/colorPrimaryDark"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="\ \n--> RSAMI, Pune - Over the Years"
                android:textStyle="bold"
                android:textSize="16dp"
                android:textColor="@color/colorPrimaryDark"
                />

            <com.example.sougataghosh.startpage.ExpandableTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/hisRSI_ID"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textStyle="italic"
                android:textSize="12dp"
                android:textColor="@color/colorPrimary"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="\ \n--> Affiliations"
                android:textStyle="bold"
                android:textSize="16dp"
                android:textColor="@color/colorPrimaryDark"
                />

            <com.example.sougataghosh.startpage.ExpandableTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/affiliations_ID"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textSize="12dp"
                android:textColor="@color/colorPrimary"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="\ \n--> Membership Rules"
                android:textStyle="bold"
                android:textSize="16dp"
                android:textColor="@color/colorPrimaryDark"
                />

            <com.example.sougataghosh.startpage.ExpandableTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/membershipRules_ID"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textSize="12dp"
                android:textColor="@color/colorPrimary"
                />

            <!--

            -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="\ \n--> Facilities"
                android:textStyle="bold"
                android:textSize="16dp"
                android:textColor="@color/colorPrimaryDark"
                />

            <android.support.v7.widget.CardView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/card_1"
                app:contentPadding="16dp"
                app:cardElevation="16dp"
                app:cardCornerRadius="30dp"
                app:cardBackgroundColor="#6d8efa"
                android:clickable="true"
                >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="#6d8efa">

                    <TextView
                        style="@style/Base.TextAppearance.AppCompat.Headline"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="Open Theatre"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textSize="18dp"
                        android:textColor="@color/colorPrimary"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/opencinema"
                        android:layout_gravity="center"/>

                    <TextView
                        style="@style/Base.TextAppearance.AppCompat.Body1"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/theatreInfo" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/card_2"
                app:contentPadding="16dp"
                app:cardElevation="16dp"
                app:cardCornerRadius="30dp"
                app:cardBackgroundColor="#aca3a3"
                android:clickable="true"
                >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="#aca3a3">

                    <TextView
                        style="@style/Base.TextAppearance.AppCompat.Headline"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="Event Lawn"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textSize="18dp"
                        android:textColor="@color/colorPrimary"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/eventlawn"
                        android:layout_gravity="center"/>

                    <TextView
                        style="@style/Base.TextAppearance.AppCompat.Body1"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/eventLawnInfo" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/card_3"
                app:contentPadding="16dp"
                app:cardElevation="16dp"
                app:cardCornerRadius="30dp"
                app:cardBackgroundColor="#aca3a3"
                android:clickable="true"
                >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="#aca3a3">

                    <TextView
                        style="@style/Base.TextAppearance.AppCompat.Headline"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="Multi-purpose Hall"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textSize="18dp"
                        android:textColor="@color/colorPrimary"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/hall"
                        android:layout_gravity="center"/>

                    <TextView
                        style="@style/Base.TextAppearance.AppCompat.Body1"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hallInfo" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/card_4"
                app:contentPadding="16dp"
                app:cardElevation="16dp"
                app:cardCornerRadius="30dp"
                app:cardBackgroundColor="#aca3a3"
                android:clickable="true"
                >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="#aca3a3">

                    <TextView
                        style="@style/Base.TextAppearance.AppCompat.Headline"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="Guest Room"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textSize="18dp"
                        android:textColor="@color/colorPrimary"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/guestroom"
                        android:layout_gravity="center"/>

                    <TextView
                        style="@style/Base.TextAppearance.AppCompat.Body1"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/guestRoomInfo" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/card_5"
                app:contentPadding="16dp"
                app:cardElevation="16dp"
                app:cardCornerRadius="30dp"
                app:cardBackgroundColor="#aca3a3"
                android:clickable="true"
                >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="#aca3a3">

                    <TextView
                        style="@style/Base.TextAppearance.AppCompat.Headline"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="Bar"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textSize="18dp"
                        android:textColor="@color/colorPrimary"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/bar"
                        android:layout_gravity="center"/>

                    <TextView
                        style="@style/Base.TextAppearance.AppCompat.Body1"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/barInfo" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/card_6"
                app:contentPadding="16dp"
                app:cardElevation="16dp"
                app:cardCornerRadius="30dp"
                app:cardBackgroundColor="#aca3a3"
                android:clickable="true"
                >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="#aca3a3">

                    <TextView
                        style="@style/Base.TextAppearance.AppCompat.Headline"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="Trinco"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textSize="18dp"
                        android:textColor="@color/colorPrimary"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/trinco"
                        android:layout_gravity="center"/>

                    <TextView
                        style="@style/Base.TextAppearance.AppCompat.Body1"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/trincoInfo" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/card_7"
                app:contentPadding="16dp"
                app:cardElevation="16dp"
                app:cardCornerRadius="30dp"
                app:cardBackgroundColor="#aca3a3"
                android:clickable="true"
                >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="#aca3a3">

                    <TextView
                        style="@style/Base.TextAppearance.AppCompat.Headline"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="Café Code Red"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textSize="18dp"
                        android:textColor="@color/colorPrimary"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/coffeeshop"
                        android:layout_gravity="center"/>

                    <TextView
                        style="@style/Base.TextAppearance.AppCompat.Body1"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cafeInfo" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/card_8"
                app:contentPadding="16dp"
                app:cardElevation="16dp"
                app:cardCornerRadius="30dp"
                app:cardBackgroundColor="#aca3a3"
                android:clickable="true"
                >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="#aca3a3">

                    <TextView
                        style="@style/Base.TextAppearance.AppCompat.Headline"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="Billiards and Snooker"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textSize="18dp"
                        android:textColor="@color/colorPrimary"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/billiard"
                        android:layout_gravity="center"/>

                    <TextView
                        style="@style/Base.TextAppearance.AppCompat.Body1"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/billiardInfo" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="\ \n--> Contact Us"
                android:textStyle="bold"
                android:textSize="16dp"
                android:textColor="@color/colorPrimaryDark"
                />

            <com.example.sougataghosh.startpage.ExpandableTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/contactUs_ID"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textSize="12dp"
                android:textColor="@color/colorPrimary"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Copyright © www.rsipune.org. All rights reserved."
                android:textColor="#0254d7"
                android:textAlignment="center"/>

        </LinearLayout>

    </ScrollView>



</android.support.constraint.ConstraintLayout>